[gd_scene load_steps=14 format=3 uid="uid://cih8wgehdsot8"]

[ext_resource type="Script" path="res://Scripts/door.gd" id="1_3inyb"]
[ext_resource type="AudioStream" uid="uid://dg34fd4titkwh" path="res://Audio/openDoor.wav" id="2_xxyk7"]
[ext_resource type="AudioStream" uid="uid://caup2j28qkuum" path="res://Audio/closeDoor.wav" id="3_vp7oe"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qfet8"]
albedo_color = Color(0.258824, 0.172549, 0.141176, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ljwg3"]
material = SubResource("StandardMaterial3D_qfet8")
size = Vector3(0.1, 3.3, 1.6)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7fffu"]
points = PackedVector3Array(0.05, 1.65, 0.8, -0.05, 1.65, 0.8, 0.05, -1.65, 0.8, 0.05, 1.65, -0.8, -0.05, 1.65, -0.8, -0.05, -1.65, 0.8, 0.05, -1.65, -0.8, -0.05, -1.65, -0.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1uenw"]
albedo_color = Color(0.189878, 0.122224, 0.0945418, 1)

[sub_resource type="BoxMesh" id="BoxMesh_08ko6"]
material = SubResource("StandardMaterial3D_1uenw")
size = Vector3(0.056, 3.45, 1.8)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cmesn"]
albedo_color = Color(0.14902, 0.0901961, 0.0705882, 1)
metallic = 0.31
metallic_specular = 0.28
metallic_texture_channel = 4
roughness = 0.57

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ueqr3"]
material = SubResource("StandardMaterial3D_cmesn")
radius = 0.1
height = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ylwmk"]
albedo_color = Color(0.121569, 0.0705882, 0.054902, 1)

[sub_resource type="BoxMesh" id="BoxMesh_6gme0"]
material = SubResource("StandardMaterial3D_ylwmk")
size = Vector3(0.2, 3.45, 0.2)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_k2jq3"]
points = PackedVector3Array(-0.1, -1.725, -0.1, -0.1, -1.725, 0.1, -0.1, 1.725, -0.1, 0.1, -1.725, -0.1, 0.1, -1.725, 0.1, -0.1, 1.725, 0.1, 0.1, 1.725, -0.1, 0.1, 1.725, 0.1)

[node name="Door" type="Node3D"]

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0948489)

[node name="PhysicDoor" type="StaticBody3D" parent="Pivot" groups=["door", "interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0948489)
collision_layer = 32777
collision_mask = 32777
script = ExtResource("1_3inyb")

[node name="CollisionMesh" type="MeshInstance3D" parent="Pivot/PhysicDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00137329, 0.0019049, -0.978199)
mesh = SubResource("BoxMesh_ljwg3")
skeleton = NodePath("../MeshInstance3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pivot/PhysicDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00137329, 0.0019049, -0.978199)
shape = SubResource("ConvexPolygonShape3D_7fffu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pivot/PhysicDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00137329, 0.0019049, -0.978199)
mesh = SubResource("BoxMesh_08ko6")
skeleton = NodePath("")

[node name="Timer" type="Timer" parent="Pivot/PhysicDoor"]
wait_time = 0.6

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Pivot/PhysicDoor"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, -1.6152)
mesh = SubResource("CapsuleMesh_ueqr3")

[node name="TurnOffTimer" type="Timer" parent="Pivot/PhysicDoor"]
wait_time = 3.0
one_shot = true

[node name="Open" type="AudioStreamPlayer3D" parent="Pivot/PhysicDoor"]
stream = ExtResource("2_xxyk7")
volume_db = -26.0

[node name="Close" type="AudioStreamPlayer3D" parent="Pivot/PhysicDoor"]
stream = ExtResource("3_vp7oe")
volume_db = -26.0

[node name="DoorFrame" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0116983)
collision_layer = 8
collision_mask = 15

[node name="MeshInstance3D" type="MeshInstance3D" parent="DoorFrame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00415838, 0.0137367)
mesh = SubResource("BoxMesh_6gme0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorFrame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00415838, 0.0137367)
shape = SubResource("ConvexPolygonShape3D_k2jq3")

[connection signal="timeout" from="Pivot/PhysicDoor/Timer" to="Pivot/PhysicDoor" method="_on_timer_timeout"]
[connection signal="timeout" from="Pivot/PhysicDoor/TurnOffTimer" to="Pivot/PhysicDoor" method="_on_turn_off_timer_timeout"]
